--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/custom-forms": "^0.2.1",
         "autoprefixer": "^10.3.7",
         "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.3.9",
-        "tailwindcss": "^2.2.16"
+        "tailwindcss": "^2.2.16",
+        "vue-loader": "^15.9.8"
     },
     "dependencies": {
         "vue": "^2.6.14",
         "vue-router": "^3.5.2",
+        "vue-template-compiler": "^2.6.14",
         "vuex": "^3.6.2"
     }
 }
