--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
         "vue-loader": "^15.9.8"
     },
     "dependencies": {
+        "v-click-outside": "^3.1.2",
         "vue": "^2.6.14",
         "vue-router": "^3.5.2",
         "vue-template-compiler": "^2.6.14",
-        "vuex": "^3.6.2"
+        "vuex": "^3.6.2",
+        "vuex-persistedstate": "^4.1.0"
     }
 }
